# SafeCloud

./: CMakeLists.txt  README.md
Client/: client_main.cpp
Common/: def.h
Server/: server_main.cpp
release/client/: client  client_debug  pippo.txt
release/client/CA/: BertCA_cert.pem  BertCA_crl.pem
release/client/users/alice/downloads/: pippo.txt
release/client/users/alice/privk/: alice_privk.pem
release/client/users/bob/: bob_privk.pem
release/client/users/carol/privk/: carol_privk.pem
release/server/: server  server_debug
release/server/crypto/: SafeCloud_cert.pem  SafeCloud_privk.pem  SafeCloud_privk_clear.pem
release/server/users/alice/: alice_pubk.pem
release/server/users/alice/pool/: babba.txt
release/server/users/bob/pubk/: bob_pubk.pem
release/server/users/carol/: carol_pubk.pem
release/server/users/carol/pool/: pippo.txt
src/client/: CliConnMgr.cpp  CliConnMgr.h  CliSTSMMgr.h  CliSessMgr.cpp  Client.cpp  Client.h  client_init.cpp  client_loop.cpp  client_main.cpp  client_utils.cpp  client_utils.h
src/client/Client/: Client.cpp  Client.h  client_excp.h
src/client/Client/CliConnMgr/: CliConnMgr.cpp  CliConnMgr.h
src/client/Client/CliConnMgr/CliSTSMMgr/: CliSTSMMgr.cpp  CliSTSMMgr.h
src/client/Client/CliConnMgr/CliSessMgr/: CliSessMgr.cpp  CliSessMgr.h
src/common/: ConnMgr.cpp  ConnMgr.h  STSM.h  STSMMgr.cpp  STSMMgr.h  SessMgr.cpp  SessMgr.h  ansi_colors.h  colors.h  defaults.h  errlog.cpp  errlog.h  sanUtils.cpp  sanUtils.h  scode.h  utils.cpp  utils.h
src/common/ConnMgr/: ConnMgr.cpp  ConnMgr.h
src/common/ConnMgr/IV/: IV.cpp  IV.h
src/common/ConnMgr/IVMgr/: IVMgr.cpp  IVMgr.h
src/common/ConnMgr/STSMMgr/: STSMMgr.cpp  STSMMgr.h  STSMMsg.h
src/common/ConnMgr/SessMgr/: SessMgr.cpp  SessMgr.h  SessMsg.h
src/common/ConnMgr/SessMgr/AESGCMMgr/: AESGCMMgr.cpp  AESGCMMgr.h
src/common/ConnMgr/SessMgr/ProgressBar/: ProgressBar.cpp  ProgressBar.h
src/common/DirInfo/: DirInfo.cpp  DirInfo.h
src/common/DirInfo/FileInfo/: FileInfo.cpp  FileInfo.h
src/common/DirInfo/FileInfo/FileMeta/: FileMeta.cpp  FileMeta.h
src/common/OpenSSL/: dh.cpp  dh.h
src/common/STSM/: STSMCliData.cpp  STSMCliData.h  STSMData.cpp  STSMData.h  STSMSrvData.cpp  STSMSrvData.h
src/common/SafeCloudApp/: SafeCloudApp.cpp  SafeCloudApp.h
src/common/SafeCloudApp/ConnMgr/: ConnMgr.cpp  ConnMgr.h
src/common/SafeCloudApp/ConnMgr/IV/: IV.cpp  IV.h
src/common/SafeCloudApp/ConnMgr/STSMMgr/: STSMMgr.cpp  STSMMgr.h  STSMMsg.h
src/common/SafeCloudApp/ConnMgr/SessMgr/: SessMgr.cpp  SessMgr.h  SessMsg.h
src/common/SafeCloudApp/ConnMgr/SessMgr/AESGCMMgr/: AESGCMMgr.cpp  AESGCMMgr.h
src/common/SafeCloudApp/ConnMgr/SessMgr/ProgressBar/: ProgressBar.cpp  ProgressBar.h
src/common/crypto/: STSM.cpp
src/common/crypto_algs/: dh.cpp
src/common/err/: ansi_colors.h  errCode.h  execErrCodes.h  sessErrCodes.h
src/common/errCodes/: ansi_colors.h  errCodes.cpp  errCodes.h
src/common/errCodes/execErrCodes/: execErrCodes.cpp  execErrCodes.h
src/common/errCodes/sessErrCodes/: sessErrCodes.cpp  sessErrCodes.h
src/common/ossl_crypto/: AES_128_CBC.cpp  AES_128_CBC.h  DigSig.cpp  DigSig.h  RSA.cpp  RSA.h
src/common/sClient/: sClient.cpp  sClient.h
src/common/sClient_old/: sClient.cpp  sClient.h
src/common/safecloud/: scode.h  scolors.h  sdef.h  sutils.cpp  sutils.h
src/server/: Server.cpp  Server.h  SrvConnMgr.cpp  SrvConnMgr.h  SrvSTSMMgr.cpp  SrvSTSMMgr.h  SrvSessMgr.cpp  SrvSessMgr.h  client.cpp  client.h  client.old.cpp  client_old.h  server_init.cpp  server_loop.cpp  server_main.cpp
src/server/Server/: Server.cpp  Server.h
src/server/Server/SrvConnMgr/: SrvConnMgr.cpp  SrvConnMgr.h
src/server/Server/SrvConnMgr/SrvSTSMMgr/: SrvSTSMMgr.cpp  SrvSTSMMgr.h
src/server/Server/SrvConnMgr/SrvSessMgr/: SrvSessMgr.cpp  SrvSessMgr.h
src/server/clients/: client.h  guest.cpp  guest.h  user.cpp  user.h
